--- a/api-reference/auth/login.mdx
+++ b/api-reference/auth/login.mdx
@@ -7,46 +7,6 @@ openapi: 'POST /auth/login'
 
 Almost every API endpoint is authenticated using Bearer JWT tokens. In order to get the token, users sign an Otim-specific SIWE and submit the `signature` and `siwe` message to this endpoint.
 
-Here's an example of what you would run to get both the `siwe` and `signature` inputs:
+Here's a script to fetch both the `siwe` and `signature` inputs:
 
-```typescript
-import { createSiweMessage } from 'viem/siwe';
-import { privateKeyToAccount } from 'viem/accounts';
-import { parseSignature } from 'viem';
-
-// 1. Use your private key to create an account
-const privateKey =
-  '0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80';
-const account = privateKeyToAccount(privateKey);
-
-// 2. Get the wallet address
-const walletAddress = account.address;
-const chainId = 1;
-
-// 3. Create the SIWE message
-const siweMessage = createSiweMessage({
-  domain: 'otim.com',
-  address: walletAddress,
-  statement:
-    'By signing in, you agree to the Terms and Conditions (https://otim.com/tac) and Privacy Policy (https://otim.com/pp).',
-  uri: 'https://otim.com',
-  version: '1',
-  chainId: chainId,
-  nonce: Date.now().toString(),
-  issuedAt: new Date(),
-});
-
-console.log('siwe:', JSON.stringify(siweMessage));
-
-// 4. Sign the message and make API call
-account.signMessage({ message: siweMessage }).then(async signature => {
-  const siweVrs = parseSignature(signature);
-
-  console.log('signature:', {
-    yParity: siweVrs.yParity,
-    r: siweVrs.r,
-    s: siweVrs.s
-  });
-});
-
-```
+<iframe src="https://replit.com/@otimlabs/Otim-Auth-Login-Walkthrough?v=1&embed=true" width="600" height="400"></iframe>
