added 712 hash explainer, added replit instruction activation demo

--- a/api-reference/instructions/instruction-build.mdx
+++ b/api-reference/instructions/instruction-build.mdx
@@ -2,3 +2,7 @@
 title: 'Build an instruction'
 openapi: 'POST /instruction/build'
 ---
+
+Building an Otim Instruction is quite simple if you just want to fill in the blanks and form your payload.
+
+But, if you want a walkthrough that includes both the `build` and `new` endpoints together to activate an Instruction, head over to [Activate an instruction](/api-reference/instructions/instruction-new).
