--- a/docs/developers/system-architecture/protocol/instruction-flows/overview.mdx
+++ b/docs/developers/system-architecture/protocol/instruction-flows/overview.mdx
@@ -4,3 +4,5 @@ sidebarTitle: "Overview"
 ---
 
 In this section, we'll get a deeper understanding of how Instructions are processed through Otim's core contracts at different points in their lifecycle.
+
+Everything interacting with Instructions uses EIP-712 hashes for execution validation. Check out [How to... TODO]() 
