added code walkthrough for instruction deactivation

--- a/api-reference/instructions/instruction-deactivate.mdx
+++ b/api-reference/instructions/instruction-deactivate.mdx
@@ -2,3 +2,7 @@
 title: 'Deactivate instruction'
 openapi: 'POST /instruction/deactivate'
 ---
+
+Here is a code walkthrough on how to simply deactivate an Instruction using its Instruction ID:
+
+<iframe src="https://replit.com/@otimlabs/Otim-Instruction-Deactivate-Walkthrough?embed=true" width="600" height="600"></iframe>
