--- a/docs/developers/system-architecture/protocol/action-contracts/current-actions.mdx
+++ b/docs/developers/system-architecture/protocol/action-contracts/current-actions.mdx
@@ -15,3 +15,5 @@ Below is the first batch of Actions currently available to users, but many more 
 | MultiCall | Execute a batch of arbitrary function calls at scheduled intervals.                                                |
 
 Find all of the above Actions' deployed contract addresses [here](/docs/developers/deployed-addresses).
+
+Reference the 712 hash ABI's for each Action [here](/docs/resources/appendix/action-hash-abis).
