--- a/docs/developers/system-architecture/protocol/instruction-flows/overview.mdx
+++ b/docs/developers/system-architecture/protocol/instruction-flows/overview.mdx
@@ -5,4 +5,4 @@ sidebarTitle: "Overview"
 
 In this section, we'll get a deeper understanding of how Instructions are processed through Otim's core contracts at different points in their lifecycle.
 
-Everything interacting with Instructions uses EIP-712 hashes for execution validation. Check out [How to... TODO]() 
+Everything interacting with Instructions uses EIP-712 hashes for execution validation. Check out [How to Construct Instruction Activation and Deactivation EIP-712 Hashes](/docs/resources/appendix/instruction-712-hashes). 
