feat: api reference improvements (#14)
* removed config tokens endpoint, added max prio fee per gas estimation endpoint

* added max prio fee per gas endpoint, added siwe msg how-to, updated res body of get instruction details endpoint

* reorganization of openapi config, moved auth setup script to login api page

* added replit code embedded code examples for both login and delegation

* fee clarifications, changed fee token to be address not symbol, added sweep deposit account

* added 712 hash explainer, added replit instruction activation demo

* added code walkthrough for instruction deactivation

* added uniswap action

* updated storedinstruction structure

--- a/api-reference/auth/login.mdx
+++ b/api-reference/auth/login.mdx
@@ -2,3 +2,11 @@
 title: 'Log in'
 openapi: 'POST /auth/login'
 ---
+
+<Warning>The "Try it" feature for this endpoint doesn't work because it doesn't double escapes newlines randomly for the `siwe` input. We recommend you try this in your terminal or a script.</Warning>
+
+Almost every API endpoint is authenticated using Bearer JWT tokens. In order to get the token, users sign an Otim-specific SIWE and submit the `signature` and `siwe` message to this endpoint.
+
+Here's a script to fetch both the `siwe` and `signature` inputs:
+
+<iframe src="https://replit.com/@otimlabs/Otim-Auth-Login-Walkthrough?v=1&embed=true" width="600" height="600"></iframe>
