--- a/api-reference/getting-started.mdx
+++ b/api-reference/getting-started.mdx
@@ -14,7 +14,7 @@ The Otim API always accepts JSON in request bodies and returns JSON in response 
 
 ## Authentication
 
-Almost every API endpoint is authenticated using Bearer JWT tokens. To retrieve an account's JWT token, sign an Otim-formatted SIWE, and call the [Log in](/api-reference/auth/login) endpoint with that SIWE and the signature over it.
+Almost every API endpoint is authenticated using Bearer JWT tokens. Check out the [Log in](/api-reference/auth/login) page on how to authorize!
 
 ## Fetch information about the Otim Platform
 
