feat: added changelog

--- a/docs/resources/changelog.mdx
+++ b/docs/resources/changelog.mdx
@@ -3,4 +3,28 @@ title: "Changelog"
 sidebarTitle: "Changelog"
 ---
 
-Coming soon™️!
+See what's new and upcoming with all of Otim's products and platform. ✨ 
+
+<Update label="2025.06.17" description="v1.0.1">
+  ## App improvements, a new fee token
+
+  ### Instructions
+  - Added USDT as a fee token option
+  - Fixed keeping embedded wallet login session live
+  - Updated default and minimum values for schedule and advanced parameters in the instruction builder
+  - Several other minor performance and UX flow improvements
+
+  ### Onboarding
+  - Added OS-dependent delegation command
+  - Turned delegation tutorial video into popup
+</Update>
+
+<Update label="2025.06.05" description="v1.0.0">
+  ## Ethereum Mainnet deployment
+
+  Here are some of the things you can do today on the Otim app:
+  - Delegate your account to Otim on Ethereum Mainnet
+  - Create an Otim-delegated account using just your email
+  - Perform swap, transfer, and refuel actions on a recurring or conditional basis
+  - Track and manage your instructions in the app dashboard
+</Update>
