--- a/docs/resources/changelog.mdx
+++ b/docs/resources/changelog.mdx
@@ -5,7 +5,7 @@ sidebarTitle: "Changelog"
 
 See what's new and upcoming with all of Otim's products and platform. ✨ 
 
-<Update label="2025.06.17" description="v1.0.1">
+<Update label="2025.06.17" description="App v0.2.1">
   ## App improvements, a new fee token
 
   ### Instructions
@@ -19,7 +19,7 @@ See what's new and upcoming with all of Otim's products and platform. ✨
   - Turned delegation tutorial video into popup
 </Update>
 
-<Update label="2025.06.05" description="v1.0.0">
+<Update label="2025.06.05" description="App v0.2.0">
   ## Ethereum Mainnet deployment
 
   Here are some of the things you can do today on the Otim app:
