added sdk section to menu bar

--- a/sdk/Flows/authentication.mdx
+++ b/sdk/Flows/authentication.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Authentication"
-description: "Description of your new file."
+sidebarTitle: "Authentication"
 ---
 
 The Otim authentication system uses SIWE (EIP-4361) for secure authentication. Users sign a message with their wallet to prove ownership of their address, and receive an authorization token for subsequent Otim Client functions.
