--- a/sdk/Flows/client-setup.mdx
+++ b/sdk/Flows/client-setup.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Client Setup"
-description: "Description of your new file."
+sidebarTitle: "Client Setup"
 ---
 
 The Otim Client provides a unified interface for interacting with the Otim Protocol. The `createOtimClient` function accepts different configuration options depending on your application type and wallet management needs.
