--- a/sdk/Flows/delegation.mdx
+++ b/sdk/Flows/delegation.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Delegation"
-description: "Description of your new file."
+sidebarTitle: "Delegation"
 ---
 
 Delegation allows your wallet to authorize Otim's smart contracts to execute transactions on your behalf. This enables features like automated trading, portfolio management, and other DeFi operations without requiring individual transaction signatures.
