--- a/sdk/Flows/instructions.mdx
+++ b/sdk/Flows/instructions.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Instructions"
-description: "Description of your new file."
+sidebarTitle: "Instructions"
 ---
 
 > **Note:** Your account must already be authenticated and delegated before building any instructions; otherwise, it will fail.
