--- a/sdk/overview.mdx
+++ b/sdk/overview.mdx
@@ -1,13 +1,11 @@
 ---
-title: "Getting Started"
-description: "Description of your new file."
+title: "Overview"
+sidebarTitle: "Overview"
 ---
-
-## Overview
 
 Otim SDK provides a complete toolkit for integrating Otim’s smart automation capabilities into your app. Built with TypeScript-first design, the SDK offers intuitive APIs for authentication, delegation, instruction building, and activation.
 
-### Key Features
+## Key Features
 
 - **SIWE Authentication** – Sign In With Ethereum for Secure EOA Delegation.
 - **Instruction Builder** – Type-safe APIs for transfers, swaps, sweeps, and refuels.
