--- a/sdk/overview.mdx
+++ b/sdk/overview.mdx
@@ -22,10 +22,10 @@ The Otim ecosystem is composed of clearly defined layers. The SDK represents the
 
 ## Start coding\!
 
-<Card title="Installation" icon="download">
-  
+<Card title="Installation" icon="download" href="/sdk/installation">
+  Install the Otim Typescript SDK.
 </Card>
 
-<Card title="Flows" icon="flower-tulip">
-  
+<Card title="Flows" icon="flower-tulip" href="/sdk/flows/client-setup">
+  Get step-by-step walkthroughs on how to implement key interactions with the Otim OS.
 </Card>
