--- a/sdk/Flows/instructions.mdx
+++ b/sdk/Flows/instructions.mdx
@@ -11,8 +11,8 @@ Transfer instructions enables native and ERC20 transfers using the Otim SDK. The
 
 Transfer instructions support two types of transfers:
 
-- **Native ETH transfers** – Direct ETH transfers between addresses
-- **ERC20 token transfers** – Token transfers for any ERC20 compatible token
+- **Native ETH transfers** – Direct ETH transfers between addresses
+- **ERC20 token transfers** – Token transfers for any ERC20 compatible token
 
 ## **Quick Start**
 
@@ -25,7 +25,7 @@ const feeEstimate = await otimClient.config.getMaxPriorityFeeEstimate({
 });
 const priorityFee = toHex(feeEstimate.normalMaxPriorityFeeEstimate);
 
-// 2. build instruction
+// 2. build instruction and activate
 const transferBuild = await otimClient.instruction.build.transfer({
   target: "0x742d35Cc6734C0532925a3b8D563C1f4C684B9Cf",
   value: parseEther("0.001"), // 0.001 ETH
@@ -35,10 +35,8 @@ const transferBuild = await otimClient.instruction.build.transfer({
   },
 });
 
-// 3. activate instruction
-const result = await otimClient.instruction.activate({
-  instruction: transferBuild.instruction,
-  actionType: transferBuild.actionType,
+// 3. activate the instruction
+const result = await transferBuild.activate({
   nickname: "eth transfer 0.001 to recipient",
 });
 
@@ -54,7 +52,7 @@ const feeEstimate = await otimClient.config.getMaxPriorityFeeEstimate({
 });
 const priorityFee = toHex(feeEstimate.normalMaxPriorityFeeEstimate);
 
-// 2. build instruction
+// 2. build instruction and activate
 const transferBuild = await otimClient.instruction.build.transfer({
   target: "0x...", // target wallet address
   value: parseUnits("10", 18), // 10 tokens with 18 decimals
@@ -65,10 +63,8 @@ const transferBuild = await otimClient.instruction.build.transfer({
   },
 });
 
-// 3. activate instruction
-const result = await otimClient.instruction.activate({
-  instruction: transferBuild.instruction,
-  actionType: transferBuild.actionType,
+// 3. activate the instruction
+const result = await transferBuild.activate({
   nickname: "erc20 transfer 10 tokens to recipient",
 });
 
