--- a/docs/developers/deployed-addresses.mdx
+++ b/docs/developers/deployed-addresses.mdx
@@ -8,121 +8,118 @@ sidebarTitle: "Contract Addresses"
     
     | Name | Address |
     | :--- | :--- |
-    | `FeeTokenRegistry` | `0xa972A2C093456c7298C3527fc87DE41F89A2eBaE` |
+    | `OtimDelegate` | `0x23E5F9C457A69Ce776d20A8fe812A6701D66fcE8` |
     | `Gateway` | `0x30891995b7aD3d4d38D16E14EE91B57372C091d2` |
     | `InstructionStorage` | `0xBeb6f683a7a247De61B9D56885f65331D7F55030` |
-    | `OtimDelegate` | `0x23E5F9C457A69Ce776d20A8fe812A6701D66fcE8` |
+    | `FeeTokenRegistry` | `0xa972A2C093456c7298C3527fc87DE41F89A2eBaE` |
     | `Treasury` | `0x1FDdC4EEEc10E3317B27563Ad0126285A329350d` |
+    | `ActionManager` | `0xe41Dfd2706e3b35c230696F3107eda85eE73cE3e` |
 
     ## Action Contracts
 
     <Tabs>
+      <Tab title="Ethereum">
+        | Name | Address |
+        | :--- | :--- |
+        | `TransferAction` | `0xE598ce7062A835A908C1e49D8d67E927E3c83F23` |
+        | `TransferERC20Action` | `0x695175ba4F2594E0A42cF89790913dCc1CcCeD72` |
+        | `RefuelAction` | `0x8FD4DA969D38e512da77cA2f7C8C6D504A855543` |
+        | `RefuelERC20Action` | `0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac` |
+        | `DeactivateInstructionAction` | `0x0B393a117eE8e2FAF4FB13fd181201fDD924Dd83` |
+        | `UniswapV3ExactInputAction` | `0xd8BE0f31BbF564C584599069ED3cb93b9b2264c7` |
+      </Tab>
       <Tab title="Arbitrum">
         | Name | Address |
         | :--- | :--- |
-        | `DeactivateInstructionAction` | `0x0B393a117eE8e2FAF4FB13fd181201fDD924Dd83` |
-        | `RefuelAction` | `0x8FD4DA969D38e512da77cA2f7C8C6D504A855543` |
-        | `RefuelERC20Action` | `0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac` |
         | `TransferAction` | `0xE598ce7062A835A908C1e49D8d67E927E3c83F23` |
         | `TransferERC20Action` | `0x695175ba4F2594E0A42cF89790913dCc1CcCeD72` |
+        | `RefuelAction` | `0x8FD4DA969D38e512da77cA2f7C8C6D504A855543` |
+        | `RefuelERC20Action` | `0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac` |
+        | `DeactivateInstructionAction` | `0x0B393a117eE8e2FAF4FB13fd181201fDD924Dd83` |
+        | `UniswapV3ExactInputAction` | `0xB7d5cA0D5C3Df4eBBf47C1149C0263DF7Ea1d140` |
+      </Tab>
+      <Tab title="Optimism">
+        | Name | Address |
+        | :--- | :--- |
+        | `TransferAction` | `0xE598ce7062A835A908C1e49D8d67E927E3c83F23` |
+        | `TransferERC20Action` | `0x695175ba4F2594E0A42cF89790913dCc1CcCeD72` |
+        | `RefuelAction` | `0x8FD4DA969D38e512da77cA2f7C8C6D504A855543` |
+        | `RefuelERC20Action` | `0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac` |
+        | `DeactivateInstructionAction` | `0x0B393a117eE8e2FAF4FB13fd181201fDD924Dd83` |
         | `UniswapV3ExactInputAction` | `0xB7d5cA0D5C3Df4eBBf47C1149C0263DF7Ea1d140` |
       </Tab>
       <Tab title="Base">
         | Name | Address |
         | :--- | :--- |
-        | `DeactivateInstructionAction` | `0x0B393a117eE8e2FAF4FB13fd181201fDD924Dd83` |
-        | `RefuelAction` | `0x8FD4DA969D38e512da77cA2f7C8C6D504A855543` |
-        | `RefuelERC20Action` | `0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac` |
         | `TransferAction` | `0xE598ce7062A835A908C1e49D8d67E927E3c83F23` |
         | `TransferERC20Action` | `0x695175ba4F2594E0A42cF89790913dCc1CcCeD72` |
+        | `RefuelAction` | `0x8FD4DA969D38e512da77cA2f7C8C6D504A855543` |
+        | `RefuelERC20Action` | `0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac` |
+        | `DeactivateInstructionAction` | `0x0B393a117eE8e2FAF4FB13fd181201fDD924Dd83` |
         | `UniswapV3ExactInputAction` | `0x8a3E70F61288047d016d9975975dFEfB187Ad6cB` |
-      </Tab>
-      <Tab title="Ethereum Mainnet">
-        | Name | Address |
-        | :--- | :--- |
-        | `DeactivateInstructionAction` | `0x0B393a117eE8e2FAF4FB13fd181201fDD924Dd83` |
-        | `RefuelAction` | `0x8FD4DA969D38e512da77cA2f7C8C6D504A855543` |
-        | `RefuelERC20Action` | `0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac` |
-        | `TransferAction` | `0xE598ce7062A835A908C1e49D8d67E927E3c83F23` |
-        | `TransferERC20Action` | `0x695175ba4F2594E0A42cF89790913dCc1CcCeD72` |
-        | `UniswapV3ExactInputAction` | `0xd8BE0f31BbF564C584599069ED3cb93b9b2264c7` |
-      </Tab>
-      <Tab title="Optimism">
-        | Name | Address |
-        | :--- | :--- |
-        | `DeactivateInstructionAction` | `0x0B393a117eE8e2FAF4FB13fd181201fDD924Dd83` |
-        | `RefuelAction` | `0x8FD4DA969D38e512da77cA2f7C8C6D504A855543` |
-        | `RefuelERC20Action` | `0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac` |
-        | `TransferAction` | `0xE598ce7062A835A908C1e49D8d67E927E3c83F23` |
-        | `TransferERC20Action` | `0x695175ba4F2594E0A42cF89790913dCc1CcCeD72` |
-        | `UniswapV3ExactInputAction` | `0xB7d5cA0D5C3Df4eBBf47C1149C0263DF7Ea1d140` |
       </Tab>
     </Tabs>
     
   </Tab>
-  
   <Tab title="Testnet">
     ## Core Contracts
     
     | Name | Address |
     | :--- | :--- |
-    | `FeeTokenRegistry` | `0x19c370A2e300429F98c17803984DC5413faAc02E` |
+    | `OtimDelegate` | `0xE1B38C99ab2727BcbD75149f25a0BD7c8a93CB1c` |
     | `Gateway` | `0x3ac1d56A5d8c6A95773E312Dd5fe3A2B2E0de225` |
     | `InstructionStorage` | `0x8A26dA63B7300f93c18A472cE440508C284C77d6` |
-    | `OtimDelegate` | `0xE1B38C99ab2727BcbD75149f25a0BD7c8a93CB1c` |
+    | `FeeTokenRegistry` | `0x19c370A2e300429F98c17803984DC5413faAc02E` |
     | `Treasury` | `0xc7536a1e8205C139d25165F6305e20299b792511` |
+    | `ActionManager` | `0x5C19E012Ba6473714C1887b211b55C768809f124` |
 
     ## Action Contracts
 
     <Tabs>
+      <Tab title="Sepolia">
+        | Name | Address |
+        | :--- | :--- |
+        | `TransferAction` | `0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F` |
+        | `TransferERC20Action` | `0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4` |
+        | `RefuelAction` | `0x355A1dA513d010fdD404E138807ea75731d08133` |
+        | `RefuelERC20Action` | `0xf8a22699d6a8Ff6284898288573B6d5a8893728B` |
+        | `DeactivateInstructionAction` | `0x1f719754FC21E58b628E02659896309354888058` |
+        | `SweepCCTPAction` | `0xa4B51D22e75783a0e52036d574b53A2101Ef8652` |
+        | `TransferCCTPAction` | `0x2CA6cAA0B4F5653b1Aa4B4922A3fF34f868112F3` |
+        | `SweepUniswapV3Action` | `0xE68Cae39ce20B1670dc2Ca17FcA63D0EafB27701` |
+        | `UniswapV3ExactInputAction` | `0x38C4623A081586d873137995a77440B801F5CD7c` |
+      </Tab>
       <Tab title="Arbitrum Sepolia">
         | Name | Address |
         | :--- | :--- |
-        | `DeactivateInstructionAction` | `0x1f719754FC21E58b628E02659896309354888058` |
-        | `RefuelAction` | `0x355A1dA513d010fdD404E138807ea75731d08133` |
-        | `RefuelERC20Action` | `0xf8a22699d6a8Ff6284898288573B6d5a8893728B` |
         | `TransferAction` | `0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F` |
         | `TransferERC20Action` | `0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4` |
+        | `RefuelAction` | `0x355A1dA513d010fdD404E138807ea75731d08133` |
+        | `RefuelERC20Action` | `0xf8a22699d6a8Ff6284898288573B6d5a8893728B` |
+        | `DeactivateInstructionAction` | `0x1f719754FC21E58b628E02659896309354888058` |
+        | `UniswapV3ExactInputAction` | `0x701e90a513c19bb70e9b1bc885Fe65675d057921` |
+      </Tab>
+      <Tab title="Optimism Sepolia">
+        | Name | Address |
+        | :--- | :--- |
+        | `TransferAction` | `0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F` |
+        | `TransferERC20Action` | `0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4` |
+        | `RefuelAction` | `0x355A1dA513d010fdD404E138807ea75731d08133` |
+        | `RefuelERC20Action` | `0xf8a22699d6a8Ff6284898288573B6d5a8893728B` |
+        | `DeactivateInstructionAction` | `0x1f719754FC21E58b628E02659896309354888058` |
         | `UniswapV3ExactInputAction` | `0x701e90a513c19bb70e9b1bc885Fe65675d057921` |
       </Tab>
       <Tab title="Base Sepolia">
         | Name | Address |
         | :--- | :--- |
-        | `DeactivateInstructionAction` | `0x1f719754FC21E58b628E02659896309354888058` |
+        | `TransferAction` | `0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F` |
+        | `TransferERC20Action` | `0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4` |
         | `RefuelAction` | `0x355A1dA513d010fdD404E138807ea75731d08133` |
         | `RefuelERC20Action` | `0xf8a22699d6a8Ff6284898288573B6d5a8893728B` |
-        | `SweepAction` | `0xDbA56dbdB3a34470F663C3De9d27D19989Ac3eAb` |
-        | `SweepERC20Action` | `0x006BDC1dD878831590851f48A1D82c0E14914125` |
+        | `DeactivateInstructionAction` | `0x1f719754FC21E58b628E02659896309354888058` |
         | `SweepCCTPAction` | `0x89972bD81F8081b793D3E4Ce2D092495415016D8` |
-        | `SweepUniswapV3Action` | `0x1E1A662d44d605e524797f2cD155320a0a41051b` |
-        | `TransferAction` | `0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F` |
-        | `TransferERC20Action` | `0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4` |
         | `TransferCCTPAction` | `0x60960EE9957f4280F3A4e5997AfdAf59AEDF94Ec` |
-        | `UniswapV3ExactInputAction` | `0x701e90a513c19bb70e9b1bc885Fe65675d057921` |
-      </Tab>
-      <Tab title="Ethereum Sepolia">
-        | Name | Address |
-        | :--- | :--- |
-        | `DeactivateInstructionAction` | `0x1f719754FC21E58b628E02659896309354888058` |
-        | `RefuelAction` | `0x355A1dA513d010fdD404E138807ea75731d08133` |
-        | `RefuelERC20Action` | `0xf8a22699d6a8Ff6284898288573B6d5a8893728B` |
-        | `SweepAction` | `0xDbA56dbdB3a34470F663C3De9d27D19989Ac3eAb` |
-        | `SweepERC20Action` | `0x006BDC1dD878831590851f48A1D82c0E14914125` |
-        | `SweepCCTPAction` | `0xa4B51D22e75783a0e52036d574b53A2101Ef8652` |
-        | `SweepUniswapV3Action` | `0xE68Cae39ce20B1670dc2Ca17FcA63D0EafB27701` |
-        | `TransferAction` | `0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F` |
-        | `TransferERC20Action` | `0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4` |
-        | `TransferCCTPAction` | `0x2CA6cAA0B4F5653b1Aa4B4922A3fF34f868112F3` |
-        | `UniswapV3ExactInputAction` | `0x38C4623A081586d873137995a77440B801F5CD7c` |
-      </Tab>
-      <Tab title="Optimism Sepolia">
-        | Name | Address |
-        | :--- | :--- |
-        | `DeactivateInstructionAction` | `0x1f719754FC21E58b628E02659896309354888058` |
-        | `RefuelAction` | `0x355A1dA513d010fdD404E138807ea75731d08133` |
-        | `RefuelERC20Action` | `0xf8a22699d6a8Ff6284898288573B6d5a8893728B` |
-        | `TransferAction` | `0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F` |
-        | `TransferERC20Action` | `0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4` |
+        | `SweepUniswapV3Action` | `0x1E1A662d44d605e524797f2cD155320a0a41051b` |
         | `UniswapV3ExactInputAction` | `0x701e90a513c19bb70e9b1bc885Fe65675d057921` |
       </Tab>
     </Tabs>
