--- a/docs/developers/deployed-addresses.mdx
+++ b/docs/developers/deployed-addresses.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Contract Addresses"
-sidebarTitle: "Contract Addresses"
+title: "Deployed Addresses"
+sidebarTitle: "Deployed Addresses"
 ---
 
 <Tabs>
@@ -9,12 +9,12 @@ sidebarTitle: "Contract Addresses"
     
     | Name | Address |
     | :--- | :--- |
-    | ActionManager | 0xe41Dfd2706e3b35c230696F3107eda85eE73cE3e |
-    | FeeTokenRegistry | 0xa972A2C093456c7298C3527fc87DE41F89A2eBaE |
-    | Gateway | 0x30891995b7aD3d4d38D16E14EE91B57372C091d2 |
-    | InstructionStorage | 0xBeb6f683a7a247De61B9D56885f65331D7F55030 |
-    | OtimDelegate | 0x23E5F9C457A69Ce776d20A8fe812A6701D66fcE8 |
-    | Treasury | 0x1FDdC4EEEc10E3317B27563Ad0126285A329350d |
+    | `ActionManager` | **[0xe41Dfd2706e3b35c230696F3107eda85eE73cE3e](https://etherscan.io/address/0xe41Dfd2706e3b35c230696F3107eda85eE73cE3e)** |
+    | `FeeTokenRegistry` | **[0xa972A2C093456c7298C3527fc87DE41F89A2eBaE](https://etherscan.io/address/0xa972A2C093456c7298C3527fc87DE41F89A2eBaE)** |
+    | `Gateway` | **[0x30891995b7aD3d4d38D16E14EE91B57372C091d2](https://etherscan.io/address/0x30891995b7aD3d4d38D16E14EE91B57372C091d2)** |
+    | `InstructionStorage` | **[0xBeb6f683a7a247De61B9D56885f65331D7F55030](https://etherscan.io/address/0xBeb6f683a7a247De61B9D56885f65331D7F55030)** |
+    | `OtimDelegate` | **[0x23E5F9C457A69Ce776d20A8fe812A6701D66fcE8](https://etherscan.io/address/0x23E5F9C457A69Ce776d20A8fe812A6701D66fcE8)** |
+    | `Treasury` | **[0x1FDdC4EEEc10E3317B27563Ad0126285A329350d](https://etherscan.io/address/0x1FDdC4EEEc10E3317B27563Ad0126285A329350d)** |
 
     ## Action Contracts
 
@@ -22,45 +22,45 @@ sidebarTitle: "Contract Addresses"
       <Tab title="Arbitrum">
         | Name | Address |
         | :--- | :--- |
-        | DeactivateInstructionAction | 0x0B393a117eE8e2FAF4FB13fd181201fDD924Dd83 |
-        | RefuelAction | 0x8FD4DA969D38e512da77cA2f7C8C6D504A855543 |
-        | RefuelERC20Action | 0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac |
-        | TransferAction | 0xE598ce7062A835A908C1e49D8d67E927E3c83F23 |
-        | TransferERC20Action | 0x695175ba4F2594E0A42cF89790913dCc1CcCeD72 |
-        | UniswapV3ExactInputAction | 0xB7d5cA0D5C3Df4eBBf47C1149C0263DF7Ea1d140 |
+        | `DeactivateInstructionAction` | **[0x0B393a117eE8e2FAF4FB13fd181201fDD924Dd83](https://arbiscan.io/address/0x0B393a117eE8e2FAF4FB13fd181201fDD924Dd83)** |
+        | `RefuelAction` | **[0x8FD4DA969D38e512da77cA2f7C8C6D504A855543](https://arbiscan.io/address/0x8FD4DA969D38e512da77cA2f7C8C6D504A855543)** |
+        | `RefuelERC20Action` | **[0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac](https://arbiscan.io/address/0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac)** |
+        | `TransferAction` | **[0xE598ce7062A835A908C1e49D8d67E927E3c83F23](https://arbiscan.io/address/0xE598ce7062A835A908C1e49D8d67E927E3c83F23)** |
+        | `TransferERC20Action` | **[0x695175ba4F2594E0A42cF89790913dCc1CcCeD72](https://arbiscan.io/address/0x695175ba4F2594E0A42cF89790913dCc1CcCeD72)** |
+        | `UniswapV3ExactInputAction` | **[0xB7d5cA0D5C3Df4eBBf47C1149C0263DF7Ea1d140](https://arbiscan.io/address/0xB7d5cA0D5C3Df4eBBf47C1149C0263DF7Ea1d140)** |
       </Tab>
       
       <Tab title="Base">
         | Name | Address |
         | :--- | :--- |
-        | DeactivateInstructionAction | 0x0B393a117eE8e2FAF4FB13fd181201fDD924Dd83 |
-        | RefuelAction | 0x8FD4DA969D38e512da77cA2f7C8C6D504A855543 |
-        | RefuelERC20Action | 0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac |
-        | TransferAction | 0xE598ce7062A835A908C1e49D8d67E927E3c83F23 |
-        | TransferERC20Action | 0x695175ba4F2594E0A42cF89790913dCc1CcCeD72 |
-        | UniswapV3ExactInputAction | 0x8a3E70F61288047d016d9975975dFEfB187Ad6cB |
+        | `DeactivateInstructionAction` | **[0x0B393a117eE8e2FAF4FB13fd181201fDD924Dd83](https://basescan.org/address/0x0B393a117eE8e2FAF4FB13fd181201fDD924Dd83)** |
+        | `RefuelAction` | **[0x8FD4DA969D38e512da77cA2f7C8C6D504A855543](https://basescan.org/address/0x8FD4DA969D38e512da77cA2f7C8C6D504A855543)** |
+        | `RefuelERC20Action` | **[0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac](https://basescan.org/address/0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac)** |
+        | `TransferAction` | **[0xE598ce7062A835A908C1e49D8d67E927E3c83F23](https://basescan.org/address/0xE598ce7062A835A908C1e49D8d67E927E3c83F23)** |
+        | `TransferERC20Action` | **[0x695175ba4F2594E0A42cF89790913dCc1CcCeD72](https://basescan.org/address/0x695175ba4F2594E0A42cF89790913dCc1CcCeD72)** |
+        | `UniswapV3ExactInputAction` | **[0x8a3E70F61288047d016d9975975dFEfB187Ad6cB](https://basescan.org/address/0x8a3E70F61288047d016d9975975dFEfB187Ad6cB)** |
       </Tab>
       
       <Tab title="Ethereum">
         | Name | Address |
         | :--- | :--- |
-        | DeactivateInstructionAction | 0x0B393a117eE8e2FAF4FB13fd181201fDD924Dd83 |
-        | RefuelAction | 0x8FD4DA969D38e512da77cA2f7C8C6D504A855543 |
-        | RefuelERC20Action | 0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac |
-        | TransferAction | 0xE598ce7062A835A908C1e49D8d67E927E3c83F23 |
-        | TransferERC20Action | 0x695175ba4F2594E0A42cF89790913dCc1CcCeD72 |
-        | UniswapV3ExactInputAction | 0xd8BE0f31BbF564C584599069ED3cb93b9b2264c7 |
+        | `DeactivateInstructionAction` | **[0x0B393a117eE8e2FAF4FB13fd181201fDD924Dd83](https://etherscan.io/address/0x0B393a117eE8e2FAF4FB13fd181201fDD924Dd83)** |
+        | `RefuelAction` | **[0x8FD4DA969D38e512da77cA2f7C8C6D504A855543](https://etherscan.io/address/0x8FD4DA969D38e512da77cA2f7C8C6D504A855543)** |
+        | `RefuelERC20Action` | **[0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac](https://etherscan.io/address/0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac)** |
+        | `TransferAction` | **[0xE598ce7062A835A908C1e49D8d67E927E3c83F23](https://etherscan.io/address/0xE598ce7062A835A908C1e49D8d67E927E3c83F23)** |
+        | `TransferERC20Action` | **[0x695175ba4F2594E0A42cF89790913dCc1CcCeD72](https://etherscan.io/address/0x695175ba4F2594E0A42cF89790913dCc1CcCeD72)** |
+        | `UniswapV3ExactInputAction` | **[0xd8BE0f31BbF564C584599069ED3cb93b9b2264c7](https://etherscan.io/address/0xd8BE0f31BbF564C584599069ED3cb93b9b2264c7)** |
       </Tab>
       
       <Tab title="Optimism">
         | Name | Address |
         | :--- | :--- |
-        | DeactivateInstructionAction | 0x0B393a117eE8e2FAF4FB13fd181201fDD924Dd83 |
-        | RefuelAction | 0x8FD4DA969D38e512da77cA2f7C8C6D504A855543 |
-        | RefuelERC20Action | 0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac |
-        | TransferAction | 0xE598ce7062A835A908C1e49D8d67E927E3c83F23 |
-        | TransferERC20Action | 0x695175ba4F2594E0A42cF89790913dCc1CcCeD72 |
-        | UniswapV3ExactInputAction | 0xB7d5cA0D5C3Df4eBBf47C1149C0263DF7Ea1d140 |
+        | `DeactivateInstructionAction` | **[0x0B393a117eE8e2FAF4FB13fd181201fDD924Dd83](https://optimistic.etherscan.io/address/0x0B393a117eE8e2FAF4FB13fd181201fDD924Dd83)** |
+        | `RefuelAction` | **[0x8FD4DA969D38e512da77cA2f7C8C6D504A855543](https://optimistic.etherscan.io/address/0x8FD4DA969D38e512da77cA2f7C8C6D504A855543)** |
+        | `RefuelERC20Action` | **[0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac](https://optimistic.etherscan.io/address/0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac)** |
+        | `TransferAction` | **[0xE598ce7062A835A908C1e49D8d67E927E3c83F23](https://optimistic.etherscan.io/address/0xE598ce7062A835A908C1e49D8d67E927E3c83F23)** |
+        | `TransferERC20Action` | **[0x695175ba4F2594E0A42cF89790913dCc1CcCeD72](https://optimistic.etherscan.io/address/0x695175ba4F2594E0A42cF89790913dCc1CcCeD72)** |
+        | `UniswapV3ExactInputAction` | **[0xB7d5cA0D5C3Df4eBBf47C1149C0263DF7Ea1d140](https://optimistic.etherscan.io/address/0xB7d5cA0D5C3Df4eBBf47C1149C0263DF7Ea1d140)** |
       </Tab>
     </Tabs>
   </Tab>
@@ -70,12 +70,12 @@ sidebarTitle: "Contract Addresses"
     
     | Name | Address |
     | :--- | :--- |
-    | ActionManager | 0x5C19E012Ba6473714C1887b211b55C768809f124 |
-    | FeeTokenRegistry | 0x19c370A2e300429F98c17803984DC5413faAc02E |
-    | Gateway | 0x3ac1d56A5d8c6A95773E312Dd5fe3A2B2E0de225 |
-    | InstructionStorage | 0x8A26dA63B7300f93c18A472cE440508C284C77d6 |
-    | OtimDelegate | 0xE1B38C99ab2727BcbD75149f25a0BD7c8a93CB1c |
-    | Treasury | 0xc7536a1e8205C139d25165F6305e20299b792511 |
+    | `ActionManager` | **[0x5C19E012Ba6473714C1887b211b55C768809f124](https://sepolia.etherscan.io/address/0x5C19E012Ba6473714C1887b211b55C768809f124)** |
+    | `FeeTokenRegistry` | **[0x19c370A2e300429F98c17803984DC5413faAc02E](https://sepolia.etherscan.io/address/0x19c370A2e300429F98c17803984DC5413faAc02E)** |
+    | `Gateway` | **[0x3ac1d56A5d8c6A95773E312Dd5fe3A2B2E0de225](https://sepolia.etherscan.io/address/0x3ac1d56A5d8c6A95773E312Dd5fe3A2B2E0de225)** |
+    | `InstructionStorage` | **[0x8A26dA63B7300f93c18A472cE440508C284C77d6](https://sepolia.etherscan.io/address/0x8A26dA63B7300f93c18A472cE440508C284C77d6)** |
+    | `OtimDelegate` | **[0xE1B38C99ab2727BcbD75149f25a0BD7c8a93CB1c](https://sepolia.etherscan.io/address/0xE1B38C99ab2727BcbD75149f25a0BD7c8a93CB1c)** |
+    | `Treasury` | **[0xc7536a1e8205C139d25165F6305e20299b792511](https://sepolia.etherscan.io/address/0xc7536a1e8205C139d25165F6305e20299b792511)** |
 
     ## Action Contracts
 
@@ -83,83 +83,83 @@ sidebarTitle: "Contract Addresses"
       <Tab title="Arbitrum Sepolia">
         | Name | Address |
         | :--- | :--- |
-        | DeactivateInstructionAction | 0x1f719754FC21E58b628E02659896309354888058 |
-        | RefuelAction | 0x355A1dA513d010fdD404E138807ea75731d08133 |
-        | RefuelERC20Action | 0xf8a22699d6a8Ff6284898288573B6d5a8893728B |
-        | SweepAction | 0xDbA56dbdB3a34470F663C3De9d27D19989Ac3eAb |
-        | SweepERC20Action | 0x006BDC1dD878831590851f48A1D82c0E14914125 |
-        | TransferAction | 0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F |
-        | TransferERC20Action | 0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4 |
-        | UniswapV3ExactInputAction | 0x701e90a513c19bb70e9b1bc885Fe65675d057921 |
+        | `DeactivateInstructionAction` | **[0x1f719754FC21E58b628E02659896309354888058](https://sepolia.arbiscan.io/address/0x1f719754FC21E58b628E02659896309354888058)** |
+        | `RefuelAction` | **[0x355A1dA513d010fdD404E138807ea75731d08133](https://sepolia.arbiscan.io/address/0x355A1dA513d010fdD404E138807ea75731d08133)** |
+        | `RefuelERC20Action` | **[0xf8a22699d6a8Ff6284898288573B6d5a8893728B](https://sepolia.arbiscan.io/address/0xf8a22699d6a8Ff6284898288573B6d5a8893728B)** |
+        | `SweepAction` | **[0xDbA56dbdB3a34470F663C3De9d27D19989Ac3eAb](https://sepolia.arbiscan.io/address/0xDbA56dbdB3a34470F663C3De9d27D19989Ac3eAb)** |
+        | `SweepERC20Action` | **[0x006BDC1dD878831590851f48A1D82c0E14914125](https://sepolia.arbiscan.io/address/0x006BDC1dD878831590851f48A1D82c0E14914125)** |
+        | `TransferAction` | **[0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F](https://sepolia.arbiscan.io/address/0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F)** |
+        | `TransferERC20Action` | **[0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4](https://sepolia.arbiscan.io/address/0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4)** |
+        | `UniswapV3ExactInputAction` | **[0x701e90a513c19bb70e9b1bc885Fe65675d057921](https://sepolia.arbiscan.io/address/0x701e90a513c19bb70e9b1bc885Fe65675d057921)** |
       </Tab>
       
       <Tab title="Base Sepolia">
         | Name | Address |
         | :--- | :--- |
-        | DeactivateInstructionAction | 0x1f719754FC21E58b628E02659896309354888058 |
-        | RefuelAction | 0x355A1dA513d010fdD404E138807ea75731d08133 |
-        | RefuelERC20Action | 0xf8a22699d6a8Ff6284898288573B6d5a8893728B |
-        | SweepAction | 0xDbA56dbdB3a34470F663C3De9d27D19989Ac3eAb |
-        | SweepERC20Action | 0x006BDC1dD878831590851f48A1D82c0E14914125 |
-        | SweepCCTPAction | 0x89972bD81F8081b793D3E4Ce2D092495415016D8 |
-        | SweepUniswapV3Action | 0x1E1A662d44d605e524797f2cD155320a0a41051b |
-        | TransferAction | 0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F |
-        | TransferCCTPAction | 0x60960EE9957f4280F3A4e5997AfdAf59AEDF94Ec |
-        | TransferERC20Action | 0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4 |
-        | UniswapV3ExactInputAction | 0x701e90a513c19bb70e9b1bc885Fe65675d057921 |
+        | `DeactivateInstructionAction` | **[0x1f719754FC21E58b628E02659896309354888058](https://sepolia.basescan.org/address/0x1f719754FC21E58b628E02659896309354888058)** |
+        | `RefuelAction` | **[0x355A1dA513d010fdD404E138807ea75731d08133](https://sepolia.basescan.org/address/0x355A1dA513d010fdD404E138807ea75731d08133)** |
+        | `RefuelERC20Action` | **[0xf8a22699d6a8Ff6284898288573B6d5a8893728B](https://sepolia.basescan.org/address/0xf8a22699d6a8Ff6284898288573B6d5a8893728B)** |
+        | `SweepAction` | **[0xDbA56dbdB3a34470F663C3De9d27D19989Ac3eAb](https://sepolia.basescan.org/address/0xDbA56dbdB3a34470F663C3De9d27D19989Ac3eAb)** |
+        | `SweepERC20Action` | **[0x006BDC1dD878831590851f48A1D82c0E14914125](https://sepolia.basescan.org/address/0x006BDC1dD878831590851f48A1D82c0E14914125)** |
+        | `SweepCCTPAction` | **[0x89972bD81F8081b793D3E4Ce2D092495415016D8](https://sepolia.basescan.org/address/0x89972bD81F8081b793D3E4Ce2D092495415016D8)** |
+        | `SweepUniswapV3Action` | **[0x1E1A662d44d605e524797f2cD155320a0a41051b](https://sepolia.basescan.org/address/0x1E1A662d44d605e524797f2cD155320a0a41051b)** |
+        | `TransferAction` | **[0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F](https://sepolia.basescan.org/address/0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F)** |
+        | `TransferCCTPAction` | **[0x60960EE9957f4280F3A4e5997AfdAf59AEDF94Ec](https://sepolia.basescan.org/address/0x60960EE9957f4280F3A4e5997AfdAf59AEDF94Ec)** |
+        | `TransferERC20Action` | **[0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4](https://sepolia.basescan.org/address/0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4)** |
+        | `UniswapV3ExactInputAction` | **[0x701e90a513c19bb70e9b1bc885Fe65675d057921](https://sepolia.basescan.org/address/0x701e90a513c19bb70e9b1bc885Fe65675d057921)** |
       </Tab>
       
       <Tab title="Ethereum Sepolia">
         | Name | Address |
         | :--- | :--- |
-        | DeactivateInstructionAction | 0x1f719754FC21E58b628E02659896309354888058 |
-        | RefuelAction | 0x355A1dA513d010fdD404E138807ea75731d08133 |
-        | RefuelERC20Action | 0xf8a22699d6a8Ff6284898288573B6d5a8893728B |
-        | SweepAction | 0xDbA56dbdB3a34470F663C3De9d27D19989Ac3eAb |
-        | SweepERC20Action | 0x006BDC1dD878831590851f48A1D82c0E14914125 |
-        | SweepCCTPAction | 0xa4B51D22e75783a0e52036d574b53A2101Ef8652 |
-        | SweepUniswapV3Action | 0xE68Cae39ce20B1670dc2Ca17FcA63D0EafB27701 |
-        | TransferAction | 0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F |
-        | TransferCCTPAction | 0x2CA6cAA0B4F5653b1Aa4B4922A3fF34f868112F3 |
-        | TransferERC20Action | 0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4 |
-        | UniswapV3ExactInputAction | 0x38C4623A081586d873137995a77440B801F5CD7c |
+        | `DeactivateInstructionAction` | **[0x1f719754FC21E58b628E02659896309354888058](https://sepolia.etherscan.io/address/0x1f719754FC21E58b628E02659896309354888058)** |
+        | `RefuelAction` | **[0x355A1dA513d010fdD404E138807ea75731d08133](https://sepolia.etherscan.io/address/0x355A1dA513d010fdD404E138807ea75731d08133)** |
+        | `RefuelERC20Action` | **[0xf8a22699d6a8Ff6284898288573B6d5a8893728B](https://sepolia.etherscan.io/address/0xf8a22699d6a8Ff6284898288573B6d5a8893728B)** |
+        | `SweepAction` | **[0xDbA56dbdB3a34470F663C3De9d27D19989Ac3eAb](https://sepolia.etherscan.io/address/0xDbA56dbdB3a34470F663C3De9d27D19989Ac3eAb)** |
+        | `SweepERC20Action` | **[0x006BDC1dD878831590851f48A1D82c0E14914125](https://sepolia.etherscan.io/address/0x006BDC1dD878831590851f48A1D82c0E14914125)** |
+        | `SweepCCTPAction` | **[0xa4B51D22e75783a0e52036d574b53A2101Ef8652](https://sepolia.etherscan.io/address/0xa4B51D22e75783a0e52036d574b53A2101Ef8652)** |
+        | `SweepUniswapV3Action` | **[0xE68Cae39ce20B1670dc2Ca17FcA63D0EafB27701](https://sepolia.etherscan.io/address/0xE68Cae39ce20B1670dc2Ca17FcA63D0EafB27701)** |
+        | `TransferAction` | **[0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F](https://sepolia.etherscan.io/address/0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F)** |
+        | `TransferCCTPAction` | **[0x2CA6cAA0B4F5653b1Aa4B4922A3fF34f868112F3](https://sepolia.etherscan.io/address/0x2CA6cAA0B4F5653b1Aa4B4922A3fF34f868112F3)** |
+        | `TransferERC20Action` | **[0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4](https://sepolia.etherscan.io/address/0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4)** |
+        | `UniswapV3ExactInputAction` | **[0x38C4623A081586d873137995a77440B801F5CD7c](https://sepolia.etherscan.io/address/0x38C4623A081586d873137995a77440B801F5CD7c)** |
       </Tab>
       
       <Tab title="Optimism Sepolia">
         | Name | Address |
         | :--- | :--- |
-        | DeactivateInstructionAction | 0x1f719754FC21E58b628E02659896309354888058 |
-        | RefuelAction | 0x355A1dA513d010fdD404E138807ea75731d08133 |
-        | RefuelERC20Action | 0xf8a22699d6a8Ff6284898288573B6d5a8893728B |
-        | SweepAction | 0xDbA56dbdB3a34470F663C3De9d27D19989Ac3eAb |
-        | SweepERC20Action | 0x006BDC1dD878831590851f48A1D82c0E14914125 |
-        | TransferAction | 0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F |
-        | TransferERC20Action | 0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4 |
-        | UniswapV3ExactInputAction | 0x701e90a513c19bb70e9b1bc885Fe65675d057921 |
+        | `DeactivateInstructionAction` | **[0x1f719754FC21E58b628E02659896309354888058](https://sepolia-optimism.etherscan.io/address/0x1f719754FC21E58b628E02659896309354888058)** |
+        | `RefuelAction` | **[0x355A1dA513d010fdD404E138807ea75731d08133](https://sepolia-optimism.etherscan.io/address/0x355A1dA513d010fdD404E138807ea75731d08133)** |
+        | `RefuelERC20Action` | **[0xf8a22699d6a8Ff6284898288573B6d5a8893728B](https://sepolia-optimism.etherscan.io/address/0xf8a22699d6a8Ff6284898288573B6d5a8893728B)** |
+        | `SweepAction` | **[0xDbA56dbdB3a34470F663C3De9d27D19989Ac3eAb](https://sepolia-optimism.etherscan.io/address/0xDbA56dbdB3a34470F663C3De9d27D19989Ac3eAb)** |
+        | `SweepERC20Action` | **[0x006BDC1dD878831590851f48A1D82c0E14914125](https://sepolia-optimism.etherscan.io/address/0x006BDC1dD878831590851f48A1D82c0E14914125)** |
+        | `TransferAction` | **[0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F](https://sepolia-optimism.etherscan.io/address/0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F)** |
+        | `TransferERC20Action` | **[0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4](https://sepolia-optimism.etherscan.io/address/0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4)** |
+        | `UniswapV3ExactInputAction` | **[0x701e90a513c19bb70e9b1bc885Fe65675d057921](https://sepolia-optimism.etherscan.io/address/0x701e90a513c19bb70e9b1bc885Fe65675d057921)** |
       </Tab>
       
       <Tab title="Pecorino Host">
         | Name | Address |
         | :--- | :--- |
-        | DeactivateInstructionAction | 0x1f719754FC21E58b628E02659896309354888058 |
-        | RefuelAction | 0x355A1dA513d010fdD404E138807ea75731d08133 |
-        | RefuelERC20Action | 0xf8a22699d6a8Ff6284898288573B6d5a8893728B |
-        | SweepAction | 0xDbA56dbdB3a34470F663C3De9d27D19989Ac3eAb |
-        | SweepERC20Action | 0x006BDC1dD878831590851f48A1D82c0E14914125 |
-        | TransferAction | 0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F |
-        | TransferERC20Action | 0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4 |
+        | `DeactivateInstructionAction` | **[0x1f719754FC21E58b628E02659896309354888058](https://explorer-host.pecorino.signet.sh/address/0x1f719754FC21E58b628E02659896309354888058)** |
+        | `RefuelAction` | **[0x355A1dA513d010fdD404E138807ea75731d08133](https://explorer-host.pecorino.signet.sh/address/0x355A1dA513d010fdD404E138807ea75731d08133)** |
+        | `RefuelERC20Action` | **[0xf8a22699d6a8Ff6284898288573B6d5a8893728B](https://explorer-host.pecorino.signet.sh/address/0xf8a22699d6a8Ff6284898288573B6d5a8893728B)** |
+        | `SweepAction` | **[0xDbA56dbdB3a34470F663C3De9d27D19989Ac3eAb](https://explorer-host.pecorino.signet.sh/address/0xDbA56dbdB3a34470F663C3De9d27D19989Ac3eAb)** |
+        | `SweepERC20Action` | **[0x006BDC1dD878831590851f48A1D82c0E14914125](https://explorer-host.pecorino.signet.sh/address/0x006BDC1dD878831590851f48A1D82c0E14914125)** |
+        | `TransferAction` | **[0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F](https://explorer-host.pecorino.signet.sh/address/0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F)** |
+        | `TransferERC20Action` | **[0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4](https://explorer-host.pecorino.signet.sh/address/0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4)** |
       </Tab>
       
       <Tab title="Pecorino Signet">
         | Name | Address |
         | :--- | :--- |
-        | DeactivateInstructionAction | 0x1f719754FC21E58b628E02659896309354888058 |
-        | RefuelAction | 0x355A1dA513d010fdD404E138807ea75731d08133 |
-        | RefuelERC20Action | 0xf8a22699d6a8Ff6284898288573B6d5a8893728B |
-        | SweepAction | 0xDbA56dbdB3a34470F663C3De9d27D19989Ac3eAb |
-        | SweepERC20Action | 0x006BDC1dD878831590851f48A1D82c0E14914125 |
-        | TransferAction | 0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F |
-        | TransferERC20Action | 0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4 |
+        | `DeactivateInstructionAction` | **[0x1f719754FC21E58b628E02659896309354888058](https://explorer.pecorino.signet.sh/address/0x1f719754FC21E58b628E02659896309354888058)** |
+        | `RefuelAction` | **[0x355A1dA513d010fdD404E138807ea75731d08133](https://explorer.pecorino.signet.sh/address/0x355A1dA513d010fdD404E138807ea75731d08133)** |
+        | `RefuelERC20Action` | **[0xf8a22699d6a8Ff6284898288573B6d5a8893728B](https://explorer.pecorino.signet.sh/address/0xf8a22699d6a8Ff6284898288573B6d5a8893728B)** |
+        | `SweepAction` | **[0xDbA56dbdB3a34470F663C3De9d27D19989Ac3eAb](https://explorer.pecorino.signet.sh/address/0xDbA56dbdB3a34470F663C3De9d27D19989Ac3eAb)** |
+        | `SweepERC20Action` | **[0x006BDC1dD878831590851f48A1D82c0E14914125](https://explorer.pecorino.signet.sh/address/0x006BDC1dD878831590851f48A1D82c0E14914125)** |
+        | `TransferAction` | **[0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F](https://explorer.pecorino.signet.sh/address/0xaf8a6c7D2e256DF87D08bC644Dc19A3B5a49Cf5F)** |
+        | `TransferERC20Action` | **[0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4](https://explorer.pecorino.signet.sh/address/0xF1dd53104b5844BCD17f7F1A5B9ab16EAC0FD0c4)** |
       </Tab>
     </Tabs>
   </Tab>
