updated changelog, added sept 11 security audit

--- a/docs/resources/changelog.mdx
+++ b/docs/resources/changelog.mdx
@@ -5,6 +5,36 @@ sidebarTitle: "Changelog"
 
 See what's new and upcoming with all of Otim's products and platform. ✨
 
+<Update label="2025.08.29" description="App v0.2.3">
+  ## Improved table views, separate mainnet from testnet
+
+  - Added chain column to the Overview and Instruction tables
+  - Separated out testnet chains and made available at [app-testnet.otim.com](https://app-testnet.otim.com)
+  - Other app performance enhancements and minor bug fixes
+</Update>
+
+<Update label="2025.08.15" description="SDK v0.1.1">
+  ## Error and RLP authorization management improvements
+
+  - Simple updates around how errors are bubbled up from calls
+  - Fixed RLP preprocessing for 7702 authlist building
+</Update>
+
+<Update label="2025.07.30" description="SDK v0.1.0">
+  ## Otim Typescript SDK v0.1 release
+
+  Build trustless automated executions into your apps and wallets with less than 10 lines of code
+
+  - Install simply by running `pnpm add @otim/sdk`, `npm install @otim/sdk`, or `yarn add @otim/sdk`
+  - Provides simple flows for:
+    - Setting up the client
+    - Authenticating users
+    - Delegating accounts via EIP-7702
+    - Activating automated instructions
+  - Compatible with embedded wallet providers like Turnkey, Privy, DFNS, Dynamic, Para, Openfort, etc.
+  - Seamless integration into existing wallet infrastructure to enable flows like subscriptions, DCA, and topping up wallet balances
+</Update>
+
 <Update label="2025.07.28" description="App v0.2.2">
   ## Error handling, seamless authentication
 
