--- a/docs/resources/security-and-audits.mdx
+++ b/docs/resources/security-and-audits.mdx
@@ -5,6 +5,9 @@ sidebarTitle: "Security & Audits"
 
 ## Otim Protocol Security Audits
 
+<Card horizontal title="aleph_v: Sweep Actions Security Assessment" href="https://github.com/otimlabs/otim-protocol/blob/main/audits/aleph_v-Sweep-Actions.pdf">
+  September 11, 2025
+</Card>
 <Card horizontal title="aleph_v: Actions Security Assessment" href="https://github.com/otimlabs/otim-protocol/blob/main/audits/aleph_v-Actions.pdf">
   May 7, 2025
 </Card>
