--- a/docs/resources/changelog.mdx
+++ b/docs/resources/changelog.mdx
@@ -21,7 +21,7 @@ See what's new and upcoming with all of Otim's products and platform. ✨
 </Update>
 
 <Update label="2025.07.30" description="SDK v0.1.0">
-  ## Otim Typescript SDK v0.1 release
+  ## Otim TypeScript SDK v0.1 release
 
   Build trustless automated executions into your apps and wallets with less than 10 lines of code
 
