updated naming in orchestrators overview + added cta

--- a/docs/developers/orchestrators/overview.mdx
+++ b/docs/developers/orchestrators/overview.mdx
@@ -3,7 +3,7 @@ title: "Overview"
 sidebarTitle: "Overview"
 ---
 
-Otim Orchestrators are financial agents that turn complex, multi-step stablecoin routing into a single transfer. No more juggling swaps, transfers, or async calls across chains and tokens. Simply send any asset on any chain to an Orchestrator address, and always get the result you expect.
+Otim Orchestrators are atomic routers that turn complex, multi-step stablecoin routing into a single transfer. No more juggling swaps, transfers, or async calls across chains and tokens. Simply send any asset on any chain to an Orchestrator address, and always get the result you expect.
 
 Think of them like **webhooks for money**: they use the Otim OS under the hood to automatically route and transform any incoming asset based on the desired settlement state.
 
@@ -39,3 +39,7 @@ Orchestrate complex fiat settlement flows across multiple local currencies, toke
 - Accepting assets from any chain and automatically convert them to bank-acceptable formats
 - Settling to traditional banking partners
 - Orchestrating assets immediately when onramped assets land on an Orchestrator
+
+---
+
+Want to get started? Head over to the [SDK](/sdk/overview) section to get going!
