updated endpoint documentation

--- a/api-reference/getting-started.mdx
+++ b/api-reference/getting-started.mdx
@@ -34,7 +34,7 @@ Almost every API endpoint is authenticated using Bearer JWT tokens. Check out th
   <Card title="Instructions" icon="compass-drafting" href="/api-reference/instructions">
     Build and activate new Instructions, view all active and past Instruction details.
   </Card>
-  <Card title="Payment Requests" icon="compass-drafting" href="/api-reference/payment-requests">
-    Build and manage payment requests with ephemeral instructions.
+  <Card title="Orchestrations" icon="compass-drafting" href="/api-reference/orchestrations">
+    Build and manage orchestrations with ephemeral instructions.
   </Card>
 </CardGroup>
