--- a/sdk/typescript-server-side/client-setup.mdx
+++ b/sdk/typescript-server-side/client-setup.mdx
@@ -25,11 +25,12 @@ Now, set up and initialize your Otim server client:
 
   async function main() {
     const client = createOtimServerClient({
-      appId: process.env.OTIM_APP_ID,
-      privateKey: process.env.OTIM_PRIVATE_KEY,
-      publicKey: process.env.OTIM_PUBLIC_KEY,
+      appId: process.env.OTIM_APP_ID!,
+      privateKey: process.env.OTIM_PRIVATE_KEY! as `0x${string}`,
+      publicKey: process.env.OTIM_PUBLIC_KEY!,
       apiKey: process.env.OTIM_API_KEY,
-      environment: process.env.OTIM_ENVIRONMENT
+      environment: process.env.OTIM_ENVIRONMENT as 'sandbox' | 'production',
+      chains: [chains.base] as any
     });
 
     await client.init();
