--- a/sdk/typescript-server-side/guides/create-settlement-orchestration.mdx
+++ b/sdk/typescript-server-side/guides/create-settlement-orchestration.mdx
@@ -43,7 +43,7 @@ Here's all it takes:
 ```
 
 A couple notes:
-- You can check the list of available chains by importing `chains` from the SDK
+- you can check the list of available chains by importing `chains` from the SDK
 - `amount` is denominated in the decimal amount of the token
 - `token` must also be in the `acceptedTokens` mapping
 - setting `maxRuns` to null would mean that you can have infinite orchestration runs with this Orchestrator
