added the otim playground

--- a/sdk/overview.mdx
+++ b/sdk/overview.mdx
@@ -11,7 +11,9 @@ The Otim SDK provides a complete toolkit for integrating Otim’s smart orchestr
   Get developer keys in order to authorized performing actions through the SDK.
 </Card>
 
-Dive in one of Otim's SDKs depending on your use case:
+Dive in one of Otim's SDKs depending on your product stack:
 <Card title="TypeScript Server-Side" icon="code" href="/sdk/typescript-server-side/installation">
   Get step-by-step walkthroughs on how to implement key interactions with the Otim OS.
 </Card>
+
+Want to just jump right in with some quickstart sandboxes? Check out the [Otim Playground](https://github.com/otimlabs/otim-playground) GitHub repository to find every developer example you may need.
