updated sdk examples

--- a/sdk/overview.mdx
+++ b/sdk/overview.mdx
@@ -5,17 +5,17 @@ sidebarTitle: "Overview"
 
 The Otim SDK provides a complete toolkit for integrating Otim’s smart orchestration capabilities directly into your app or workfow.
 
-## **Start Building with Otim\!**
+## Start Building with Otim!
 
 <Card title="Getting Your Developer Keys (required)" icon="key" href="/sdk/getting-your-developer-keys">
   Get developer keys in order to authorized performing actions through the SDK.
 </Card>
 
-Dive in one of Otim's SDKs depending on your product stack:
+### Server-Side
 
 <CardGroup cols={2}>
-  <Card title="Go" icon="golang" iconType="brands" href="/sdk/go/installation"></Card>
-  <Card title="TypeScript Server-Side" icon="code" href="/sdk/typescript-server-side/installation"></Card>
+  <Card title="Go" icon="golang" iconType="brands" href="/sdk/installation-and-setup"></Card>
+  <Card title="TypeScript" icon="code" href="/sdk/installation-and-setup"></Card>
 </CardGroup>
 
 Want to just jump right in with some quickstart sandboxes? Check out the [Otim Playground](https://github.com/otimlabs/otim-playground) GitHub repository to find every developer example you may need.
